Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -525,6 +525,37 @@
     ]
   },
   {
+    "title": "Nghiên cứu biến khối u thành thịt lợn để điều trị ung thư",
+    "content": "Một nhóm nghiên cứu tại Trung Quốc đã phát triển phương pháp biến đổi tế bào khối u thành mô lợn để điều trị ung thư, kích hoạt phản ứng miễn dịch mạnh mẽ nhằm tấn công khối u mà không ảnh hưởng đến tế bào khỏe mạnh. Kết quả thử nghiệm lâm sàng cho thấy 90% bệnh nhân giai đoạn cuối đã ngừng phát triển ung thư hoặc có khối u co lại. Phương pháp này đánh dấu một bước tiến mới trong điều trị ung thư, mang lại hy vọng cho bệnh nhân khi các liệu pháp thông thường không còn hiệu quả.",
+    "link": "https://vnexpress.net/nghien-cuu-bien-khoi-u-thanh-thit-lon-de-dieu-tri-ung-thu-4862995.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Phương pháp nào được nghiên cứu để điều trị ung thư bằng cách biến khối u thành mô lợn?",
+    "answers": [
+      {
+        "text": "Biến tế bào khối u thành mô lợn",
+        "correct": true
+      },
+      {
+        "text": "Biến tế bào khối u thành mô bò",
+        "correct": false
+      },
+      {
+        "text": "Biến tế bào khối u thành tế bào người",
+        "correct": false
+      },
+      {
+        "text": "Thay thế khối u bằng thuốc hóa trị",
+        "correct": false
+      },
+      {
+        "text": "Sử dụng tia xạ để tiêu diệt khối u",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tàu ngầm của Mỹ hiện diện ngoài khơi Australia",
     "content": "Tàu ngầm tấn công lớp Virginia USS Minnesota của Mỹ đã cập cảng HMAS Stirling tại Australia, đánh dấu sự hiện diện của tàu ngầm hạt nhân Mỹ thứ 7 kể từ khi thỏa thuận AUKUS được ký kết vào năm 2021. USS Minnesota sẽ lưu trú tại đây và là một phần trong kế hoạch tăng cường lực lượng hải quân Mỹ tại khu vực Ấn Độ Dương - Thái Bình Dương. Dự kiến, Australia sẽ biên chế thêm nhiều nhân sự để hỗ trợ cho hoạt động tàu ngầm hạt nhân trong tương lai.",
     "link": "https://dantri.com.vn/the-gioi/tau-ngam-cua-my-hien-dien-ngoai-khoi-australia-20250317144812745.htm",
@@ -609,37 +640,6 @@
       },
       {
         "text": "Vì anh bỏ cuộc giữa chừng.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Diên mạo ga T3 Tân Sơn Nhất trước thời điểm hoạt động",
-    "content": "Ga T3 Tân Sơn Nhất đang trong giai đoạn hoàn thiện cuối cùng trước khi chính thức đi vào hoạt động vào ngày 30/4 tới. Với tổng đầu tư 11.000 tỷ đồng, nhà ga sẽ phục vụ 20 triệu hành khách mỗi năm, nâng tổng công suất của sân bay lên 50 triệu. Công trình gồm 4 tầng nổi và 1 tầng hầm, với nhiều hạng mục đã hoàn thiện như mái lợp nhôm, kính và các hệ thống hạ tầng giao thông kết nối. Khi đưa vào hoạt động, ga T3 sẽ chịu trách nhiệm cho khoảng 80% lượng khách nội địa, giảm tải cho ga T1 đang quá tải.",
-    "link": "https://vnexpress.net/dien-mao-ga-t3-tan-son-nhat-truoc-thoi-diem-hoat-dong-4862970.html",
-    "cat": "thoi-su",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Khi nào ga T3 Tân Sơn Nhất sẽ chính thức hoạt động?",
-    "answers": [
-      {
-        "text": "30/4/2025",
-        "correct": true
-      },
-      {
-        "text": "1/5/2025",
-        "correct": false
-      },
-      {
-        "text": "15/5/2025",
-        "correct": false
-      },
-      {
-        "text": "1/6/2025",
-        "correct": false
-      },
-      {
-        "text": "30/3/2025",
         "correct": false
       }
     ]
@@ -779,6 +779,37 @@
       },
       {
         "text": "Do thời tiết xấu làm hỏng cầu thang.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Diên mạo ga T3 Tân Sơn Nhất trước thời điểm hoạt động",
+    "content": "Ga T3 Tân Sơn Nhất đang trong giai đoạn hoàn thiện cuối cùng trước khi chính thức đi vào hoạt động vào ngày 30/4 tới. Với tổng đầu tư 11.000 tỷ đồng, nhà ga sẽ phục vụ 20 triệu hành khách mỗi năm, nâng tổng công suất của sân bay lên 50 triệu. Công trình gồm 4 tầng nổi và 1 tầng hầm, với nhiều hạng mục đã hoàn thiện như mái lợp nhôm, kính và các hệ thống hạ tầng giao thông kết nối. Khi đưa vào hoạt động, ga T3 sẽ chịu trách nhiệm cho khoảng 80% lượng khách nội địa, giảm tải cho ga T1 đang quá tải.",
+    "link": "https://vnexpress.net/dien-mao-ga-t3-tan-son-nhat-truoc-thoi-diem-hoat-dong-4862970.html",
+    "cat": "thoi-su",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Khi nào ga T3 Tân Sơn Nhất sẽ chính thức hoạt động?",
+    "answers": [
+      {
+        "text": "30/4/2025",
+        "correct": true
+      },
+      {
+        "text": "1/5/2025",
+        "correct": false
+      },
+      {
+        "text": "15/5/2025",
+        "correct": false
+      },
+      {
+        "text": "1/6/2025",
+        "correct": false
+      },
+      {
+        "text": "30/3/2025",
         "correct": false
       }
     ]
@@ -2639,33 +2670,6 @@
     ]
   },
   {
-    "title": "Hai cách đỗ xe cơ bản cho tài xế mới",
-    "content": "Bài viết trình bày hai cách đỗ xe cơ bản cho tài xế mới, bao gồm đỗ xe ghép ngang và ghép dọc. Đối với đỗ xe ghép ngang, tài xế cần chọn vị trí đỗ dài hơn xe và thực hiện các thao tác đánh lái để đỗ xe an toàn. Còn đối với đỗ xe ghép dọc, tài xế chỉ cần lùi xe vào chỗ trống đã chọn, đồng thời bật đèn cảnh báo và quan sát kỹ để tránh va chạm. Luyện tập thường xuyên và sử dụng các thiết bị hỗ trợ như gương chiếu hậu và camera sẽ giúp tài xế nâng cao kỹ năng đỗ xe.",
-    "link": "https://vnexpress.net/hai-cach-do-xe-co-ban-cho-tai-xe-moi-4861253.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Hai cách đỗ xe cơ bản cho tài xế mới là gì?",
-    "answers": [
-      {
-        "text": "Đỗ xe ghép ngang và ghép dọc",
-        "correct": true
-      },
-      {
-        "text": "Đỗ xe song song và đỗ xe chéo",
-        "correct": false
-      },
-      {
-        "text": "Đỗ xe nhanh và đỗ xe chậm",
-        "correct": false
-      },
-      {
-        "text": "Đỗ xe một chiều và đỗ xe hai chiều",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Giảm 11 kg, giảm bệnh nền",
     "content": "Chị Hà, 31 tuổi, đã giảm 11 kg sau khi điều trị béo phì tại Bệnh viện Đa khoa Tâm Anh TP HCM, giúp cải thiện tình trạng rối loạn kinh nguyệt và gan nhiễm mỡ. Khi bắt đầu, chị nặng gần 90 kg và mắc nhiều bệnh liên quan đến béo phì. Sau hai tháng áp dụng liệu trình giảm cân kết hợp thuốc và chế độ ăn uống hợp lý, sức khỏe của chị đã cải thiện rõ rệt, chu kỳ kinh nguyệt trở lại bình thường và các chỉ số sức khỏe cải thiện.",
     "link": "https://vnexpress.net/giam-11-kg-giam-benh-nen-4862793.html",
@@ -2692,6 +2696,33 @@
       },
       {
         "text": "8 kg, sức khỏe tệ hơn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hai cách đỗ xe cơ bản cho tài xế mới",
+    "content": "Bài viết trình bày hai cách đỗ xe cơ bản cho tài xế mới, bao gồm đỗ xe ghép ngang và ghép dọc. Đối với đỗ xe ghép ngang, tài xế cần chọn vị trí đỗ dài hơn xe và thực hiện các thao tác đánh lái để đỗ xe an toàn. Còn đối với đỗ xe ghép dọc, tài xế chỉ cần lùi xe vào chỗ trống đã chọn, đồng thời bật đèn cảnh báo và quan sát kỹ để tránh va chạm. Luyện tập thường xuyên và sử dụng các thiết bị hỗ trợ như gương chiếu hậu và camera sẽ giúp tài xế nâng cao kỹ năng đỗ xe.",
+    "link": "https://vnexpress.net/hai-cach-do-xe-co-ban-cho-tai-xe-moi-4861253.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Hai cách đỗ xe cơ bản cho tài xế mới là gì?",
+    "answers": [
+      {
+        "text": "Đỗ xe ghép ngang và ghép dọc",
+        "correct": true
+      },
+      {
+        "text": "Đỗ xe song song và đỗ xe chéo",
+        "correct": false
+      },
+      {
+        "text": "Đỗ xe nhanh và đỗ xe chậm",
+        "correct": false
+      },
+      {
+        "text": "Đỗ xe một chiều và đỗ xe hai chiều",
         "correct": false
       }
     ]
@@ -4406,33 +4437,6 @@
     ]
   },
   {
-    "title": "Khóa học tiếng Anh của tài tử Hoa ngữ Ngô Ngạn Tổ gây tranh cãi",
-    "content": "Khóa học tiếng Anh online của tài tử Ngô Ngạn Tổ đã gây ra nhiều tranh cãi sau khi ra mắt. Dù được quảng bá là cơ hội học tiếng Anh với ngữ điệu chuẩn như người bản ngữ, nhiều học viên cho rằng nội dung khóa học quá đơn giản và không đáp ứng được kỳ vọng của họ. Một số người còn đề nghị hoàn tiền vì chất lượng không như mong đợi, trong khi một số khác cho rằng khóa học này vẫn có giá trị nhất định cho những người mới bắt đầu học tiếng Anh.",
-    "link": "https://dantri.com.vn/giao-duc/khoa-hoc-tieng-anh-cua-tai-tu-hoa-ngu-ngo-ngan-to-gay-tranh-cai-20250317112008974.htm",
-    "cat": "giao-duc",
-    "positivity": 4,
-    "importance": 6,
-    "question": "Khóa học tiếng Anh của Ngô Ngạn Tổ có chất lượng như thế nào?",
-    "answers": [
-      {
-        "text": "Nội dung khóa học quá đơn giản và không đáp ứng được kỳ vọng.",
-        "correct": true
-      },
-      {
-        "text": "Khóa học rất hấp dẫn và chất lượng cao.",
-        "correct": false
-      },
-      {
-        "text": "Người học đều hài lòng với khóa học.",
-        "correct": false
-      },
-      {
-        "text": "Khóa học không có đủ bài học cần thiết.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ôtô hybrid của Honda sẽ dùng pin của Toyota",
     "content": "Honda dự kiến sẽ sử dụng pin do Toyota sản xuất cho các mẫu ôtô hybrid tại Mỹ bắt đầu từ năm tài chính 2025. Quyết định này nhằm giảm rủi ro thuế quan dưới thời chính quyền Tổng thống Donald Trump. Khoảng 400.000 xe hybrid sẽ được trang bị pin sản xuất tại nhà máy của Toyota ở North Carolina. Honda cũng đang chuyển nhiều hoạt động sản xuất sang Mỹ để đối phó với thuế suất cao từ Mexico và Canada.",
     "link": "https://vnexpress.net/oto-hybrid-cua-honda-se-dung-pin-cua-toyota-4862583.html",
@@ -4459,6 +4463,33 @@
       },
       {
         "text": "Từ Tesla",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khóa học tiếng Anh của tài tử Hoa ngữ Ngô Ngạn Tổ gây tranh cãi",
+    "content": "Khóa học tiếng Anh online của tài tử Ngô Ngạn Tổ đã gây ra nhiều tranh cãi sau khi ra mắt. Dù được quảng bá là cơ hội học tiếng Anh với ngữ điệu chuẩn như người bản ngữ, nhiều học viên cho rằng nội dung khóa học quá đơn giản và không đáp ứng được kỳ vọng của họ. Một số người còn đề nghị hoàn tiền vì chất lượng không như mong đợi, trong khi một số khác cho rằng khóa học này vẫn có giá trị nhất định cho những người mới bắt đầu học tiếng Anh.",
+    "link": "https://dantri.com.vn/giao-duc/khoa-hoc-tieng-anh-cua-tai-tu-hoa-ngu-ngo-ngan-to-gay-tranh-cai-20250317112008974.htm",
+    "cat": "giao-duc",
+    "positivity": 4,
+    "importance": 6,
+    "question": "Khóa học tiếng Anh của Ngô Ngạn Tổ có chất lượng như thế nào?",
+    "answers": [
+      {
+        "text": "Nội dung khóa học quá đơn giản và không đáp ứng được kỳ vọng.",
+        "correct": true
+      },
+      {
+        "text": "Khóa học rất hấp dẫn và chất lượng cao.",
+        "correct": false
+      },
+      {
+        "text": "Người học đều hài lòng với khóa học.",
+        "correct": false
+      },
+      {
+        "text": "Khóa học không có đủ bài học cần thiết.",
         "correct": false
       }
     ]
@@ -4981,33 +5012,6 @@
       },
       {
         "text": "Carrhae Capital",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ôtô đang chạy bật đèn khẩn cấp có bị phạt?",
-    "content": "Ôtô đang chạy khi bật đèn khẩn cấp có thể bị xử phạt theo quy định của pháp luật giao thông. Theo thông tư hiện hành, việc sử dụng đèn khẩn cấp trong khi xe đang di chuyển không đúng quy định có thể bị phạt tiền. Mức phạt cụ thể sẽ phụ thuộc vào từng trường hợp và mức độ vi phạm.",
-    "link": "https://vnexpress.net/oto-dang-chay-bat-den-khan-cap-co-bi-phat-4862313.html",
-    "cat": "phap-luat",
-    "positivity": 4,
-    "importance": 6,
-    "question": "Ôtô bật đèn khẩn cấp khi đang chạy có bị phạt không?",
-    "answers": [
-      {
-        "text": "Có, ôtô bật đèn khẩn cấp khi chạy có thể bị phạt.",
-        "correct": true
-      },
-      {
-        "text": "Không, ôtô bật đèn khẩn cấp khi chạy không bị phạt.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ phạt nếu chạy quá tốc độ.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ phạt nếu đèn khẩn cấp không hoạt động.",
         "correct": false
       }
     ]
