Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Lầu Năm Góc cảnh báo dùng lực lượng áp đảo chống lại Houthi",
+    "content": "Lầu Năm Góc đã nhấn mạnh rằng Mỹ sẽ không ngừng các hoạt động quân sự nhằm làm suy yếu lực lượng Houthi ở Yemen sau hàng loạt cuộc tấn công vào tàu Hải quân Mỹ và tàu thương mại. Tổng thống Trump đã ra lệnh tấn công Houthi và cảnh báo rằng Iran sẽ phải chịu trách nhiệm cho những hành động này. Houthi cho biết họ sẽ tiếp tục tấn công cho đến khi viện trợ đến Gaza, bất chấp các cuộc không kích của Mỹ.",
+    "link": "https://dantri.com.vn/the-gioi/lau-nam-goc-canh-bao-dung-luc-luong-ap-dao-chong-lai-houthi-20250319063825911.htm",
+    "cat": "the-gioi",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Mỹ sẽ làm gì đối với lực lượng Houthi ở Yemen?",
+    "answers": [
+      {
+        "text": "Tiếp tục tấn công và làm suy yếu Houthi",
+        "correct": true
+      },
+      {
+        "text": "Ngừng mọi hoạt động quân sự",
+        "correct": false
+      },
+      {
+        "text": "Thảo luận hòa bình với Houthi",
+        "correct": false
+      },
+      {
+        "text": "Hỗ trợ Houthi chống lại Israel",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mùa hoa muôn sắc trên đỉnh Sa Mù ở tây Trường Sơn",
     "content": "Mùa hoa tháng 3 trên đỉnh đèo Sa Mù, tỉnh Quảng Trị, tạo nên bức tranh thiên nhiên rực rỡ với nhiều loại hoa dại như hoa trẩu, hoa mua và hoa râm. Đỉnh đèo nằm ở độ cao hơn 1.000m, khí hậu mát mẻ, thường có mây mù. Đèo Sa Mù không chỉ là điểm giao thương mà còn là điểm đến lý tưởng cho du khách và phượt thủ khám phá vẻ đẹp hoang dã và hệ sinh thái đa dạng. Ngoài hoa nở, khu vực này còn có đời sống văn hóa phong phú của người Vân Kiều bản địa.",
     "link": "https://tuoitre.vn/mua-hoa-muon-sac-tren-dinh-sa-mu-o-tay-truong-son-20250318205435865.htm",
@@ -1543,6 +1570,33 @@
     ]
   },
   {
+    "title": "\"Vovinam Dance\": Kết hợp võ thuật với vũ đạo, sân chơi mới cho giới trẻ",
+    "content": "Cuộc thi \"Vovinam Dance 2025\" vừa được tổ chức tại Hà Nội, do Đài PT-TH Hà Nội và Liên đoàn Vovinam Việt Nam phối hợp thực hiện. Đây là sự kiện kết hợp giữa võ thuật và nghệ thuật, nhằm tôn vinh kỷ niệm 50 năm Ngày Giải phóng miền Nam và 80 năm Quốc khánh Việt Nam. Cuộc thi không chỉ là sân chơi cho các võ sinh và vũ công mà còn là cơ hội để quảng bá văn hóa Vovinam ra thế giới, với tổng giải thưởng lên tới 550 triệu đồng.",
+    "link": "https://dantri.com.vn/giai-tri/vovinam-dance-ket-hop-vo-thuat-voi-vu-dao-san-choi-moi-cho-gioi-tre-20250318203314904.htm",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Cuộc thi Vovinam Dance 2025 được tổ chức nhằm mục đích gì?",
+    "answers": [
+      {
+        "text": "Tôn vinh văn hóa và nghệ thuật Vovinam",
+        "correct": true
+      },
+      {
+        "text": "Tạo ra một môn thể thao mới",
+        "correct": false
+      },
+      {
+        "text": "Giới thiệu võ thuật của các nước khác",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức giải thưởng cho các môn thể thao khác",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "7 trái cây giàu protein hỗ trợ giảm mỡ",
     "content": "Bài viết giới thiệu 7 loại trái cây giàu protein giúp hỗ trợ quá trình giảm mỡ, bao gồm ổi, bơ, kiwi, mít, chanh dây, mơ và lựu. Những trái cây này không chỉ cung cấp protein mà còn chứa chất xơ và các vitamin cần thiết cho cơ thể, giúp tạo cảm giác no lâu và tăng cường sức khỏe. Mặc dù hàm lượng protein trong trái cây không cao như trong thịt hay đậu, nhưng chúng vẫn mang lại nhiều lợi ích cho việc quản lý cân nặng và sức khỏe tổng thể.",
     "link": "https://vnexpress.net/7-trai-cay-giau-protein-ho-tro-giam-mo-4862631.html",
@@ -1623,33 +1677,6 @@
       },
       {
         "text": "Ho không liên quan đến việc uống nước.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Vovinam Dance\": Kết hợp võ thuật với vũ đạo, sân chơi mới cho giới trẻ",
-    "content": "Cuộc thi \"Vovinam Dance 2025\" vừa được tổ chức tại Hà Nội, do Đài PT-TH Hà Nội và Liên đoàn Vovinam Việt Nam phối hợp thực hiện. Đây là sự kiện kết hợp giữa võ thuật và nghệ thuật, nhằm tôn vinh kỷ niệm 50 năm Ngày Giải phóng miền Nam và 80 năm Quốc khánh Việt Nam. Cuộc thi không chỉ là sân chơi cho các võ sinh và vũ công mà còn là cơ hội để quảng bá văn hóa Vovinam ra thế giới, với tổng giải thưởng lên tới 550 triệu đồng.",
-    "link": "https://dantri.com.vn/giai-tri/vovinam-dance-ket-hop-vo-thuat-voi-vu-dao-san-choi-moi-cho-gioi-tre-20250318203314904.htm",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Cuộc thi Vovinam Dance 2025 được tổ chức nhằm mục đích gì?",
-    "answers": [
-      {
-        "text": "Tôn vinh văn hóa và nghệ thuật Vovinam",
-        "correct": true
-      },
-      {
-        "text": "Tạo ra một môn thể thao mới",
-        "correct": false
-      },
-      {
-        "text": "Giới thiệu võ thuật của các nước khác",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức giải thưởng cho các môn thể thao khác",
         "correct": false
       }
     ]
@@ -2316,37 +2343,6 @@
     ]
   },
   {
-    "title": "Bộ ngành giảm 22.000 biên chế sau tinh gọn",
-    "content": "Các bộ, cơ quan ngang bộ và cơ quan thuộc Chính phủ đã giảm 22.323 biên chế, chiếm 20% tổng biên chế, trong quá trình tinh gọn bộ máy. Bộ trưởng Nội vụ, Phạm Thị Thanh Trà, cho biết đã giảm 13 tổng cục và tổ chức tương đương, cùng với nhiều cục, vụ và chi cục. Việc cải cách này được coi là một cuộc cách mạng trong hệ thống chính trị và nhằm nâng cao hiệu quả quản lý. Tuy nhiên, vẫn còn tồn tại tình trạng chồng chéo giữa các luật chuyên ngành cần được giải quyết.",
-    "link": "https://vnexpress.net/bo-nganh-giam-22-000-bien-che-sau-tinh-gon-4862794.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Bộ ngành đã giảm bao nhiêu biên chế trong quá trình tinh gọn?",
-    "answers": [
-      {
-        "text": "22.323 biên chế",
-        "correct": true
-      },
-      {
-        "text": "15.000 biên chế",
-        "correct": false
-      },
-      {
-        "text": "30.000 biên chế",
-        "correct": false
-      },
-      {
-        "text": "10.000 biên chế",
-        "correct": false
-      },
-      {
-        "text": "18.500 biên chế",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dự kiến hoàn thành sáp nhập các tỉnh thành trước 30/8",
     "content": "Bộ trưởng Nội vụ Phạm Thị Thanh Trà thông báo rằng việc sáp nhập các tỉnh thành trên toàn quốc sẽ hoàn tất trước ngày 30/8 và sẽ chính thức đi vào hoạt động từ tháng 9. Cùng với đó, việc sáp nhập các đơn vị hành chính cấp xã cũng sẽ hoàn thành trước 30/6. Bộ trưởng nhấn mạnh rằng quy trình này cần được thực hiện thận trọng, kỹ lưỡng và hiệu quả, đồng thời kêu gọi sự phối hợp chặt chẽ từ các bộ ngành để đảm bảo tiến độ thực hiện.",
     "link": "https://vnexpress.net/du-kien-hoan-thanh-sap-nhap-cac-tinh-thanh-truoc-30-8-4862794.html",
@@ -2378,28 +2374,32 @@
     ]
   },
   {
-    "title": "Hai cách đỗ xe cơ bản cho tài xế mới",
-    "content": "Bài viết trình bày hai cách đỗ xe cơ bản cho tài xế mới, bao gồm đỗ xe ghép ngang và ghép dọc. Đối với đỗ xe ghép ngang, tài xế cần chọn vị trí đỗ dài hơn xe và thực hiện các thao tác đánh lái để đỗ xe an toàn. Còn đối với đỗ xe ghép dọc, tài xế chỉ cần lùi xe vào chỗ trống đã chọn, đồng thời bật đèn cảnh báo và quan sát kỹ để tránh va chạm. Luyện tập thường xuyên và sử dụng các thiết bị hỗ trợ như gương chiếu hậu và camera sẽ giúp tài xế nâng cao kỹ năng đỗ xe.",
-    "link": "https://vnexpress.net/hai-cach-do-xe-co-ban-cho-tai-xe-moi-4861253.html",
-    "cat": "oto-xe-may",
+    "title": "Bộ ngành giảm 22.000 biên chế sau tinh gọn",
+    "content": "Các bộ, cơ quan ngang bộ và cơ quan thuộc Chính phủ đã giảm 22.323 biên chế, chiếm 20% tổng biên chế, trong quá trình tinh gọn bộ máy. Bộ trưởng Nội vụ, Phạm Thị Thanh Trà, cho biết đã giảm 13 tổng cục và tổ chức tương đương, cùng với nhiều cục, vụ và chi cục. Việc cải cách này được coi là một cuộc cách mạng trong hệ thống chính trị và nhằm nâng cao hiệu quả quản lý. Tuy nhiên, vẫn còn tồn tại tình trạng chồng chéo giữa các luật chuyên ngành cần được giải quyết.",
+    "link": "https://vnexpress.net/bo-nganh-giam-22-000-bien-che-sau-tinh-gon-4862794.html",
+    "cat": "thoi-su",
     "positivity": 8,
-    "importance": 7,
-    "question": "Hai cách đỗ xe cơ bản cho tài xế mới là gì?",
+    "importance": 9,
+    "question": "Bộ ngành đã giảm bao nhiêu biên chế trong quá trình tinh gọn?",
     "answers": [
       {
-        "text": "Đỗ xe ghép ngang và ghép dọc",
+        "text": "22.323 biên chế",
         "correct": true
       },
       {
-        "text": "Đỗ xe song song và đỗ xe chéo",
+        "text": "15.000 biên chế",
         "correct": false
       },
       {
-        "text": "Đỗ xe nhanh và đỗ xe chậm",
+        "text": "30.000 biên chế",
         "correct": false
       },
       {
-        "text": "Đỗ xe một chiều và đỗ xe hai chiều",
+        "text": "10.000 biên chế",
+        "correct": false
+      },
+      {
+        "text": "18.500 biên chế",
         "correct": false
       }
     ]
@@ -2431,6 +2431,33 @@
       },
       {
         "text": "8 kg, sức khỏe tệ hơn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hai cách đỗ xe cơ bản cho tài xế mới",
+    "content": "Bài viết trình bày hai cách đỗ xe cơ bản cho tài xế mới, bao gồm đỗ xe ghép ngang và ghép dọc. Đối với đỗ xe ghép ngang, tài xế cần chọn vị trí đỗ dài hơn xe và thực hiện các thao tác đánh lái để đỗ xe an toàn. Còn đối với đỗ xe ghép dọc, tài xế chỉ cần lùi xe vào chỗ trống đã chọn, đồng thời bật đèn cảnh báo và quan sát kỹ để tránh va chạm. Luyện tập thường xuyên và sử dụng các thiết bị hỗ trợ như gương chiếu hậu và camera sẽ giúp tài xế nâng cao kỹ năng đỗ xe.",
+    "link": "https://vnexpress.net/hai-cach-do-xe-co-ban-cho-tai-xe-moi-4861253.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Hai cách đỗ xe cơ bản cho tài xế mới là gì?",
+    "answers": [
+      {
+        "text": "Đỗ xe ghép ngang và ghép dọc",
+        "correct": true
+      },
+      {
+        "text": "Đỗ xe song song và đỗ xe chéo",
+        "correct": false
+      },
+      {
+        "text": "Đỗ xe nhanh và đỗ xe chậm",
+        "correct": false
+      },
+      {
+        "text": "Đỗ xe một chiều và đỗ xe hai chiều",
         "correct": false
       }
     ]
@@ -4543,63 +4570,32 @@
     ]
   },
   {
-    "title": "Saigon Co.op đặt mục tiêu tăng trưởng 2 con số trong năm 2025",
-    "content": "Saigon Co.op đặt mục tiêu doanh thu thương mại điện tử đạt 3.500 tỉ đồng trong năm 2025, tăng 30% so với năm trước. Công ty dự kiến khai trương 154 điểm bán mới và phát triển nền tảng thương mại điện tử mới nhằm nâng cao sức cạnh tranh. Tổng giám đốc Nguyễn Anh Đức cho biết, họ đang hướng đến mức tăng trưởng hai con số để tạo nền tảng phát triển bền vững cho những năm tiếp theo.",
-    "link": "https://tuoitre.vn/saigon-co-op-dat-muc-tieu-tang-truong-2-con-so-trong-nam-2025-20250317224915755.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Saigon Co.op đặt mục tiêu doanh thu thương mại điện tử bao nhiêu trong năm 2025?",
-    "answers": [
-      {
-        "text": "3.500 tỉ đồng",
-        "correct": true
-      },
-      {
-        "text": "2.500 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "4.000 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "5.000 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "1.500 tỉ đồng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nhồi máu cơ tim do bóc tách động mạch vành",
-    "content": "Bà Lụa, 62 tuổi, đã bị nhồi máu cơ tim cấp do bóc tách động mạch vành sau ba tháng đau tức ngực. Các bác sĩ đã can thiệp kịp thời bằng phương pháp chụp cắt lớp kết quang nội mạch để xác định nguyên nhân và đặt stent phù hợp, giúp tái thông mạch vành. Bệnh nhân đã vượt qua thời gian vàng điều trị nhưng không gặp biến chứng nguy hiểm. Bóc tách động mạch vành có thể xảy ra ở mọi lứa tuổi, đặc biệt là ở phụ nữ tiền mãn kinh và những người có yếu tố nguy cơ như huyết áp cao.",
-    "link": "https://vnexpress.net/nhoi-mau-co-tim-do-boc-tach-dong-mach-vanh-4862378.html",
+    "title": "Những biến chứng nặng của bệnh sởi",
+    "content": "Bệnh sởi có thể gây ra nhiều biến chứng nặng nề cho trẻ em, đặc biệt là viêm não, suy dinh dưỡng và suy giảm miễn dịch. Theo bác sĩ Trương Hữu Khanh, viêm não do sởi có thể để lại di chứng nghiêm trọng và tỷ lệ tử vong cao lên tới 20%. Ngoài ra, bệnh cũng làm tổn thương hệ tiêu hóa, dẫn đến suy dinh dưỡng và tăng nguy cơ mắc các bệnh nhiễm trùng khác. Việc tiêm vaccine sởi cho trẻ là biện pháp phòng ngừa hiệu quả nhất.",
+    "link": "https://vnexpress.net/nhung-bien-chung-nang-cua-benh-soi-4862549.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Bóc tách động mạch vành gây ra triệu chứng gì?",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Những biến chứng nặng nào có thể xảy ra khi trẻ mắc bệnh sởi?",
     "answers": [
       {
-        "text": "Đau ngực và khó thở",
+        "text": "Viêm não, suy dinh dưỡng, suy giảm miễn dịch",
         "correct": true
       },
       {
-        "text": "Chảy máu cam",
+        "text": "Sốt, ho, chảy nước mũi",
         "correct": false
       },
       {
-        "text": "Đau đầu",
+        "text": "Đau đầu, mệt mỏi, chóng mặt",
         "correct": false
       },
       {
-        "text": "Nôn mửa",
+        "text": "Tiêu chảy, nôn mửa",
         "correct": false
       },
       {
-        "text": "Ngứa ngáy da",
+        "text": "Ngứa, phát ban, dị ứng",
         "correct": false
       }
     ]
@@ -4636,32 +4632,63 @@
     ]
   },
   {
-    "title": "Những biến chứng nặng của bệnh sởi",
-    "content": "Bệnh sởi có thể gây ra nhiều biến chứng nặng nề cho trẻ em, đặc biệt là viêm não, suy dinh dưỡng và suy giảm miễn dịch. Theo bác sĩ Trương Hữu Khanh, viêm não do sởi có thể để lại di chứng nghiêm trọng và tỷ lệ tử vong cao lên tới 20%. Ngoài ra, bệnh cũng làm tổn thương hệ tiêu hóa, dẫn đến suy dinh dưỡng và tăng nguy cơ mắc các bệnh nhiễm trùng khác. Việc tiêm vaccine sởi cho trẻ là biện pháp phòng ngừa hiệu quả nhất.",
-    "link": "https://vnexpress.net/nhung-bien-chung-nang-cua-benh-soi-4862549.html",
+    "title": "Nhồi máu cơ tim do bóc tách động mạch vành",
+    "content": "Bà Lụa, 62 tuổi, đã bị nhồi máu cơ tim cấp do bóc tách động mạch vành sau ba tháng đau tức ngực. Các bác sĩ đã can thiệp kịp thời bằng phương pháp chụp cắt lớp kết quang nội mạch để xác định nguyên nhân và đặt stent phù hợp, giúp tái thông mạch vành. Bệnh nhân đã vượt qua thời gian vàng điều trị nhưng không gặp biến chứng nguy hiểm. Bóc tách động mạch vành có thể xảy ra ở mọi lứa tuổi, đặc biệt là ở phụ nữ tiền mãn kinh và những người có yếu tố nguy cơ như huyết áp cao.",
+    "link": "https://vnexpress.net/nhoi-mau-co-tim-do-boc-tach-dong-mach-vanh-4862378.html",
     "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Những biến chứng nặng nào có thể xảy ra khi trẻ mắc bệnh sởi?",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Bóc tách động mạch vành gây ra triệu chứng gì?",
     "answers": [
       {
-        "text": "Viêm não, suy dinh dưỡng, suy giảm miễn dịch",
+        "text": "Đau ngực và khó thở",
         "correct": true
       },
       {
-        "text": "Sốt, ho, chảy nước mũi",
+        "text": "Chảy máu cam",
         "correct": false
       },
       {
-        "text": "Đau đầu, mệt mỏi, chóng mặt",
+        "text": "Đau đầu",
         "correct": false
       },
       {
-        "text": "Tiêu chảy, nôn mửa",
+        "text": "Nôn mửa",
         "correct": false
       },
       {
-        "text": "Ngứa, phát ban, dị ứng",
+        "text": "Ngứa ngáy da",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Saigon Co.op đặt mục tiêu tăng trưởng 2 con số trong năm 2025",
+    "content": "Saigon Co.op đặt mục tiêu doanh thu thương mại điện tử đạt 3.500 tỉ đồng trong năm 2025, tăng 30% so với năm trước. Công ty dự kiến khai trương 154 điểm bán mới và phát triển nền tảng thương mại điện tử mới nhằm nâng cao sức cạnh tranh. Tổng giám đốc Nguyễn Anh Đức cho biết, họ đang hướng đến mức tăng trưởng hai con số để tạo nền tảng phát triển bền vững cho những năm tiếp theo.",
+    "link": "https://tuoitre.vn/saigon-co-op-dat-muc-tieu-tang-truong-2-con-so-trong-nam-2025-20250317224915755.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Saigon Co.op đặt mục tiêu doanh thu thương mại điện tử bao nhiêu trong năm 2025?",
+    "answers": [
+      {
+        "text": "3.500 tỉ đồng",
+        "correct": true
+      },
+      {
+        "text": "2.500 tỉ đồng",
+        "correct": false
+      },
+      {
+        "text": "4.000 tỉ đồng",
+        "correct": false
+      },
+      {
+        "text": "5.000 tỉ đồng",
+        "correct": false
+      },
+      {
+        "text": "1.500 tỉ đồng",
         "correct": false
       }
     ]
