Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Gần 200.000 người tham gia chiến dịch chạy bộ Triệu bước chân nhân ái",
+    "content": "Chiến dịch \"Triệu bước chân nhân ái - Tiếp bước trang sử vàng\" do Hội Chữ thập đỏ Việt Nam tổ chức, nhằm kỷ niệm 50 năm thống nhất đất nước và tri ân các anh hùng liệt sĩ. Dự kiến thu hút gần 200.000 người tham gia thông qua hình thức chạy bộ hoặc đi bộ, với mục tiêu đạt tổng quãng đường 5 triệu km và quyên góp 5 tỷ đồng để hỗ trợ các hoạt động nhân đạo. Chiến dịch sẽ diễn ra trên nền tảng thể thao trực tuyến vRace từ ngày 25/2/2024 đến 28/4/2025.",
+    "link": "https://vnexpress.net/gan-200-000-nguoi-tham-gia-chien-dich-chay-bo-trieu-buoc-chan-nhan-ai-4861503.html",
+    "cat": "thoi-su",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chiến dịch \"Triệu bước chân nhân ái\" hướng tới mục tiêu gì?",
+    "answers": [
+      {
+        "text": "Kỷ niệm 50 năm thống nhất đất nước",
+        "correct": true
+      },
+      {
+        "text": "Tổ chức một giải đấu thể thao quốc tế",
+        "correct": false
+      },
+      {
+        "text": "Vận động quyên góp cho các hoạt động thể thao",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường sức khỏe cho người dân",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lầu Năm Góc cảnh báo dùng lực lượng áp đảo chống lại Houthi",
     "content": "Lầu Năm Góc đã nhấn mạnh rằng Mỹ sẽ không ngừng các hoạt động quân sự nhằm làm suy yếu lực lượng Houthi ở Yemen sau hàng loạt cuộc tấn công vào tàu Hải quân Mỹ và tàu thương mại. Tổng thống Trump đã ra lệnh tấn công Houthi và cảnh báo rằng Iran sẽ phải chịu trách nhiệm cho những hành động này. Houthi cho biết họ sẽ tiếp tục tấn công cho đến khi viện trợ đến Gaza, bất chấp các cuộc không kích của Mỹ.",
     "link": "https://dantri.com.vn/the-gioi/lau-nam-goc-canh-bao-dung-luc-luong-ap-dao-chong-lai-houthi-20250319063825911.htm",
@@ -4830,64 +4857,6 @@
       },
       {
         "text": "Pháp",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Làm thế nào để giàu có hơn ở tuổi 30?",
-    "content": "Bài viết hướng dẫn cách trở nên giàu có hơn ở tuổi 30 thông qua những bước cụ thể. Đầu tiên, cần xác định rõ khái niệm giàu có với bản thân và lập một bảng tầm nhìn để hình dung mục tiêu. Tiếp theo, nên thương lượng mức lương khi có cơ hội, lập kế hoạch trả nợ và ưu tiên thanh toán dứt điểm các khoản nợ. Cuối cùng, việc đầu tư vào một ngôi nhà được xem là một chiến lược quan trọng để xây dựng tài sản lâu dài.",
-    "link": "https://vnexpress.net/lam-the-nao-de-giau-co-hon-o-tuoi-30-4862543.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để trở nên giàu có hơn ở tuổi 30?",
-    "answers": [
-      {
-        "text": "Xác định rõ mục tiêu tài chính và thương lượng mức lương.",
-        "correct": true
-      },
-      {
-        "text": "Không cần lập kế hoạch trả nợ.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần tiết kiệm mà không cần đầu tư.",
-        "correct": false
-      },
-      {
-        "text": "Tập trung hoàn toàn vào công việc mà không cần xem xét các yếu tố khác.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Doanh nghiệp muốn tăng giá thịt heo bình ổn",
-    "content": "Giá heo hơi đã giảm trong thời gian gần đây, nhưng giá thịt heo tại các chợ vẫn giữ ở mức cao. Nhiều doanh nghiệp tham gia chương trình bình ổn giá đang đề nghị tăng giá bán lẻ thịt heo từ 6-7% do vẫn phải mua vào với giá cao hơn, trong khi sức mua giảm. Các doanh nghiệp lo ngại tình hình giá cả sẽ còn khó khăn do ảnh hưởng từ nguồn cung và nhu cầu trên thị trường.",
-    "link": "https://tuoitre.vn/doanh-nghiep-muon-tang-gia-thit-heo-binh-on-20250318074221053.htm",
-    "cat": "kinh-doanh",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao doanh nghiệp muốn tăng giá thịt heo bình ổn?",
-    "answers": [
-      {
-        "text": "Do giá heo hơi mua vào vẫn cao",
-        "correct": true
-      },
-      {
-        "text": "Vì sức mua tăng mạnh",
-        "correct": false
-      },
-      {
-        "text": "Để giảm lỗ cho doanh nghiệp",
-        "correct": false
-      },
-      {
-        "text": "Do nguồn cung heo giống tăng",
-        "correct": false
-      },
-      {
-        "text": "Vì giá thịt heo đang giảm",
         "correct": false
       }
     ]
